Improved solution generator.